Fix text overlap on mobile

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -8,7 +8,7 @@
   }
   h2 {
     font-size: 54px;
-    line-height: 0.5;
+    line-height: 1;
     color: rgb(75, 75, 75);
   }
   .btn-large {
